--- a/srcMobile/css/02_common.css
+++ b/srcMobile/css/02_common.css
@@ -141,11 +141,11 @@ a.btnFollow.active:after{background:url("../images/ico_follow_on.png") no-repeat
 .underTxtMark {padding-left:20px; color:#666; font-size:11px; line-height:130%; position:relative; text-align:left;}
 .underTxtMark:before {content:''; width:14.5px; height:14.5px; border-radius:50%; background:url('../images/ico_qMark.png') center no-repeat #999; background-size:5px 9px; position:absolute; top:0; left:0;}
 
-/* bottom fix*/
-.btmFix{position: fixed;bottom: 0;left: 0;right: 0;z-index: 1;text-align: center;}
+/* bottom fix
 .btmFix a{font-size:18px !important;}
 .btmFix + .container{padding-bottom: 55px;}
-.btmFix + .layerPopup{padding-bottom: 55px;}
+.btmFix + .layerPopup{padding-bottom: 55px;}*/
+.btmFix{position:relative;bottom: 0;left: 0;right: 0;z-index: 1;text-align: center;}
 .btmFix.fixwrap ul{overflow:hidden;}
 .btmFix.fixwrap ul li{width:50%;float:left;}
 
