--- a/srcMobile/css/06_mypage.css
+++ b/srcMobile/css/06_mypage.css
@@ -160,7 +160,7 @@
 .pageTop p {width:100%; line-height:130%; font-size:13px;}
 .pageTop button.allDel {padding:7.5px 7.5px 7.5px 15px; position:absolute; top:0; right:0; border:0; background:none;}
 
-.pageTop.scrapTop {padding-right:15px;margin-bottom:10px;}
+.pageTop.scrapTop {padding-right:15px;}
 .pageTop.scrapTop b {font-family:TimesNewRoman, 'Times New Roman', Times, Baskerville, Georgia, sans-serif; font-style:italic; font-weight:bold;}
 .pageTop.scrapTop b i{color:#00aeb9;}
 .pageTop.scrapTop p {text-align:center;}
@@ -215,6 +215,7 @@ ul.noticeList li .text p.time {width:75px; text-align:center; position:absolute;
 .scrapWrap ul.scrap li.scrapBg02 {background-color:#ae66ff;}
 .scrapWrap ul.scrap li.scrapBg03 {background-color:#ffbd4a;}
 
+.scrapTop {width:100%; overflow:hidden; position:relative;}
 .scrapListTop {padding:8px 15px; border-top:1px solid #53babb; background:#5ccfd0; position:relative;}
 .scrapListTop p {width:100%; color:#fff; line-height:130%;}
 .scrapListTop a.scrapListMore {width:35px; height:35px; display:inline-block; font-size:0; position:absolute; top:0; right:0;}
@@ -225,7 +226,7 @@ ul.noticeList li .text p.time {width:75px; text-align:center; position:absolute;
 .scrapListTop ul.sListMoreCon li + li {border-top:1px solid #ccc;}
 .scrapbtnTopR {width:100%; overflow:hidden; position:relative;}
 .scrapbtnTopR a:last-child {margin-right:15px;}
-.scrapbtnTop {width:100%; overflow:hidden; position:relative; padding:10px 0; background:#e0e0e0;}
+.scrapbtnTop {width:100%; overflow:hidden; position:relative; padding:10px 0;}
 .scrapbtnTop .checkAll {width:80%; margin-left:15px; text-align:left; overflow:hidden;}
 .scrapbtnTop .btnR {width:150px; position:absolute; top:10px; right:15px; text-align:right;}
 .scrapbtnTop .btnR button {border:0; position:relative; color:#333; font-family:'NotoSansR', 'RobotoR', sans-serif; display:inline-block; padding:0; background:transparent;}
@@ -504,7 +505,7 @@ ul.myCartInfoList li + li {margin-top:5px;}
 ul.myCartInfoList li:before {content:''; width:2px; height:2px; border-radius:50%; background:#666; position:absolute; top:7px; left:0;}
 table ul.myCartInfoList {padding:5px 0;}
 table ul.myCartInfoList li {color:#999;}
-.myCartTotal {width:100%; overflow:hidden; position:fixed; bottom:0; left:0; z-index:4;}
+.myCartTotal {width:100%; overflow:hidden; position:relative;}
 .myCartTotal .total{padding:20px 50px 20px 15px; border-top:1px solid #ccc; overflow:hidden; position:relative; background:#fff;}
 .myCartTotal p.totalTit {width:40%; float:left; color:#333; font-family:'NotoSansM', 'RobotoM', sans-serif; line-height:20px; font-size:15px;}
 .myCartTotal p.totalTit span {width:100%; display:inline-block; font-size:12px; color:#999;}
